changed some copy"

--- a/web/tmpl/SynView.tmpl
+++ b/web/tmpl/SynView.tmpl
@@ -629,7 +629,7 @@ onClick="loading([], ['results']); run([
   </TD>
  <TR>
   <TD>
-  <font class="small">Draw high-quality images? (few seconds slower) <label><input class="backbox" type="radio" name="hiqual" id="hiqual" tabindex="1" value="1" />Yes</label><label><input class="backbox" type="radio" name="hiqual" id="hiqual" tabindex="1" value="0" checked />No</label></font>
+  <font class="small">Draw high-quality images? (~50% slower algorithm) <label><input class="backbox" type="radio" name="hiqual" id="hiqual" tabindex="1" value="1" />Yes</label><label><input class="backbox" type="radio" name="hiqual" id="hiqual" tabindex="1" value="0" checked />No</label></font>
  </TR>
 </TABLE>
 <td width="3" bgcolor="#99FF99">
