made arguments names parameters for ajax func run

--- a/web/tmpl/SynView.tmpl
+++ b/web/tmpl/SynView.tmpl
@@ -132,6 +132,7 @@ function rev_locs (val) {
 }
 
 function check_blast_program (){
+alert($("blast_program"));
 var s = document.getElementById('blast_program')
 var selectedOption = s[s.selectedIndex]
 var sval = selectedOption.value
@@ -142,88 +143,88 @@ var sval = selectedOption.value
 
 <input type="button" value="GO"
 onClick="loading([], ['results']); run([
-	'accn1',
-	'featid1', 
-	'dr1up', 
-	'dr1down', 
-	'dsid1',
-	'rev_region1', 
+	'args__accn1','accn1',
+	'args__featid1', 'featid1', 
+	'args__up1', 'dr1up', 
+	'args__down1', 'dr1down', 
+	'args__dsid1', 'dsid1',
+	'args__rev1', 'rev_region1', 
 
-	'accn2', 
-	'featid2', 
-	'dr2up', 
-	'dr2down', 
-	'dsid2',
-	'rev_region2', 
+	'args__accn2', 'accn2', 
+	'args__featid2', 'featid2', 
+	'args__up2', 'dr2up', 
+	'args__down2', 'dr2down', 
+	'args__dsid2', 'dsid2',
+	'args__rev2', 'rev_region2', 
 
-	'accn3', 
-	'featid3', 
-	'dr3up', 
-	'dr3down', 
-	'dsid3',
-	'rev_region3', 
+	'args__accn3', 'accn3', 
+	'args__featid3', 'featid3', 
+	'args__up3', 'dr3up', 
+	'args__down3', 'dr3down', 
+	'args__dsid3', 'dsid3',
+	'args__rev3', 'rev_region3', 
 
-	'gbaccn1', 
-	'gb1start', 
-	'gb1up', 
-	'gb1down', 
+	'args__gbaccn1', 'gbaccn1', 
+	'args__gb1start', 'gb1start', 
+	'args__gb1up', 'gb1up', 
+	'args__gb1down', 'gb1down', 
 
-	'gbaccn2', 
-	'gb2start', 
-	'gb2up', 
-	'gb2down', 
+	'args__gbaccn2', 'gbaccn2', 
+	'args__gb2start', 'gb2start', 
+	'args__gb2up', 'gb2up', 
+	'args__gb2down', 'gb2down', 
 
-	'gbaccn3', 
-	'gb3start', 
-	'gb3up', 
-	'gb3down', 
+	'args__gbaccn3', 'gbaccn3', 
+	'args__gb3start', 'gb3start', 
+	'args__gb3up', 'gb3up', 
+	'args__gb3down', 'gb3down', 
 
-	'seq1', 
-	'comp1',
-	'start1',
-	'stop1',
+	'args__seq1', 'seq1', 
+	'args__dscomp1', 'comp1',
+	'args__dsstart1', 'start1',
+	'args__dsstop1', 'stop1',
 
-	'seq2', 
-	'comp2', 
-	'start2',
-	'stop2',
+	'args__seq2', 'seq2', 
+	'args__dscomp2', 'comp2', 
+	'args__dsstart2', 'start2',
+	'args__dsstop2', 'stop2',
 
-	'seq3', 
-	'comp3', 
-	'start3',
-	'stop3',
+	'args__seq3', 'seq3', 
+	'args__dscomp3', 'comp3', 
+	'args__dsstart3', 'start3',
+	'args__dsstop3', 'stop3',
 
-	'matchfilter', 
-	'spike', 
-	'mask', 
-	'mask_ncs', 
-	'wordsize', 
-	'gapopen', 
-	'gapextend', 
-	'mismatch',
-	'eval', 
-	'blastparams',
-	'iw',
-	'ih', 
-	'feat_h',
-        'show_gc',
-	'color_hsp',
-	'hsp_labels',
-	'overlap_adjustment',
-	'hiqual',
-	'hsp_limit',
-	'hsp_limit_num',
-	'blast_program',
-	'show_hsps_with_stop_codon',
-        'hsp1r',
-        'hsp1g',
-        'hsp1b',
-        'hsp2r',
-        'hsp2g',
-        'hsp2b',
-        'hsp3r',
-        'hsp3g',
-        'hsp3b',
+	'args__matchfilter', 'matchfilter', 
+	'args__spike', 'spike', 
+	'args__mask', 'mask', 
+	'args__maskcns', 'mask_ncs', 
+	'args__word', 'wordsize', 
+	'args__gapo', 'gapopen', 
+	'args__gape', 'gapextend', 
+	'args__mmatch', 'mismatch',
+	'args__eval', 'eval', 
+	'args__bp', 'blastparams',
+	'args__iw', 'iw',
+	'args__ih', 'ih', 
+	'args__fh', 'feat_h',
+        'args__gc', 'show_gc',
+	'args__colorhsp', 'color_hsp',
+	'args__hsplabel', 'hsp_labels',
+	'args__overlap', 'overlap_adjustment',
+	'args__hiqual', 'hiqual',
+	'args__hsplim', 'hsp_limit',
+	'args__hsplimnum', 'hsp_limit_num',
+	'args__prog', 'blast_program',
+	'args__showallhsps', 'show_hsps_with_stop_codon',
+        'args__h1r', 'hsp1r',
+        'args__h1g', 'hsp1g',
+        'args__h1b', 'hsp1b',
+        'args__h2r', 'hsp2r',
+        'args__h2g', 'hsp2g',
+        'args__h2b', 'hsp2b',
+        'args__h3r', 'hsp3r',
+        'args__h3g', 'hsp3g',
+        'args__h3b', 'hsp3b',
 
   
 ],
@@ -516,7 +517,10 @@ onClick="loading([], ['results']); run([
        <option>blastz</option>
       </select>
    </TD>
- </TR>    
+ </TR>
+   </Table>    
+ <DIV id = "blast_options">
+   <Table class=small>    
   <TR>
    <td colspan =2 class=small>Note: parameters won't work with blastz
   <TR>
@@ -545,6 +549,7 @@ onClick="loading([], ['results']); run([
  </TR>         
  <TR><TD><DIV id="show_hsps"><input type="hidden" id="show_hsps_with_stop_codon" value=0></DIV>
 </TABLE>
+</DIV>
      </table>
      <span class="subItem"></span>
      <span class="subItem"></span>
@@ -746,90 +751,91 @@ onClick="loading([], ['results']); run([
 
 
 <input type="button" value="GO"
-onClick="loading([], ['results']);run([
-	'accn1',
-	'featid1', 
-	'dr1up', 
-	'dr1down', 
-	'dsid1', 
-	'rev_region1', 
+onClick="loading([], ['results']); run([
+	'args__accn1','accn1',
+	'args__featid1', 'featid1', 
+	'args__up1', 'dr1up', 
+	'args__down1', 'dr1down', 
+	'args__dsid1', 'dsid1',
+	'args__rev1', 'rev_region1', 
 
-	'accn2', 
-	'featid2', 
-	'dr2up', 
-	'dr2down', 
-	'dsid2',
-	'rev_region2', 
+	'args__accn2', 'accn2', 
+	'args__featid2', 'featid2', 
+	'args__up2', 'dr2up', 
+	'args__down2', 'dr2down', 
+	'args__dsid2', 'dsid2',
+	'args__rev2', 'rev_region2', 
 
-	'accn3', 
-	'featid3', 
-	'dr3up', 
-	'dr3down', 
-	'dsid3',
-	'rev_region3', 
+	'args__accn3', 'accn3', 
+	'args__featid3', 'featid3', 
+	'args__up3', 'dr3up', 
+	'args__down3', 'dr3down', 
+	'args__dsid3', 'dsid3',
+	'args__rev3', 'rev_region3', 
 
-	'gbaccn1', 
-	'gb1start', 
-	'gb1up', 
-	'gb1down', 
+	'args__gbaccn1', 'gbaccn1', 
+	'args__gb1start', 'gb1start', 
+	'args__gb1up', 'gb1up', 
+	'args__gb1down', 'gb1down', 
 
-	'gbaccn2', 
-	'gb2start', 
-	'gb2up', 
-	'gb2down', 
+	'args__gbaccn2', 'gbaccn2', 
+	'args__gb2start', 'gb2start', 
+	'args__gb2up', 'gb2up', 
+	'args__gb2down', 'gb2down', 
 
-	'gbaccn3', 
-	'gb3start', 
-	'gb3up', 
-	'gb3down', 
+	'args__gbaccn3', 'gbaccn3', 
+	'args__gb3start', 'gb3start', 
+	'args__gb3up', 'gb3up', 
+	'args__gb3down', 'gb3down', 
 
-	'seq1', 
-	'comp1', 
-	'start1',
-	'stop1',
+	'args__seq1', 'seq1', 
+	'args__dscomp1', 'comp1',
+	'args__dsstart1', 'start1',
+	'args__dsstop1', 'stop1',
 
-	'seq2', 
-	'comp2', 
-	'start2',
-	'stop2',
+	'args__seq2', 'seq2', 
+	'args__dscomp2', 'comp2', 
+	'args__dsstart2', 'start2',
+	'args__dsstop2', 'stop2',
 
-	'seq3', 
-	'comp3', 
-	'start3',
-	'stop3',
+	'args__seq3', 'seq3', 
+	'args__dscomp3', 'comp3', 
+	'args__dsstart3', 'start3',
+	'args__dsstop3', 'stop3',
 
-	'matchfilter', 
-	'spike', 
-	'mask', 
-	'mask_ncs', 
-	'wordsize', 
-	'gapopen', 
-	'gapextend', 
-	'mismatch',
-	'eval', 
-	'blastparams',
-	'iw',
-	'ih', 
-	'feat_h',
-	'show_gc',
-	'color_hsp',
-	'hsp_labels',
-	'overlap_adjustment',
-        'hiqual',
-	'hsp_limit',
-	'hsp_limit_num',
-	'blast_program',
-	'show_hsps_with_stop_codon',
-        'hsp1r',
-        'hsp1g',
-        'hsp1b',
-        'hsp2r',
-        'hsp2g',
-        'hsp2b',
-        'hsp3r',
-        'hsp3g',
-        'hsp3b',
+	'args__matchfilter', 'matchfilter', 
+	'args__spike', 'spike', 
+	'args__mask', 'mask', 
+	'args__maskcns', 'mask_ncs', 
+	'args__word', 'wordsize', 
+	'args__gapo', 'gapopen', 
+	'args__gape', 'gapextend', 
+	'args__mmatch', 'mismatch',
+	'args__eval', 'eval', 
+	'args__bp', 'blastparams',
+	'args__iw', 'iw',
+	'args__ih', 'ih', 
+	'args__fh', 'feat_h',
+        'args__gc', 'show_gc',
+	'args__colorhsp', 'color_hsp',
+	'args__hsplabel', 'hsp_labels',
+	'args__overlap', 'overlap_adjustment',
+	'args__hiqual', 'hiqual',
+	'args__hsplim', 'hsp_limit',
+	'args__hsplimnum', 'hsp_limit_num',
+	'args__prog', 'blast_program',
+	'args__showallhsps', 'show_hsps_with_stop_codon',
+        'args__h1r', 'hsp1r',
+        'args__h1g', 'hsp1g',
+        'args__h1b', 'hsp1b',
+        'args__h2r', 'hsp2r',
+        'args__h2g', 'hsp2g',
+        'args__h2b', 'hsp2b',
+        'args__h3r', 'hsp3r',
+        'args__h3g', 'hsp3g',
+        'args__h3b', 'hsp3b',
 
+  
 ],
 ['results'], 'POST');"
 >   &nbsp;&nbsp;
