added more items cleared by the reset funciton

--- a/web/tmpl/SynView.tmpl
+++ b/web/tmpl/SynView.tmpl
@@ -43,7 +43,12 @@ $('#accn2').val("");
 dataset_search(['accn2','args__2'],[feat_search_chain]);
 $('#accn3').val("");
 dataset_search(['accn3','args__3'],[feat_search_chain]);
-
+$('#gbaccn1').val("");
+$('#gbaccn2').val("");
+$('#gbaccn3').val("");
+$('#seq1').val("");
+$('#seq2').val("");
+$('#seq3').val("");
 }
 
 
