updated name to GEvo

--- a/web/tmpl/SynView.tmpl
+++ b/web/tmpl/SynView.tmpl
@@ -765,7 +765,7 @@ Note: parameter options haven't been implemented for blastz (yet)
   </TD>
   <TD>
     <DIV>
-	Looking for help?  Check out the <a href ="help/SynView">SynView help page</a>!
+	Looking for help?  Check out the <a href ="help/GEvo">GEvo help page</a>!
     </DIV>
   </TD>
  </TR>
