removed auto selection of blast program

--- a/web/tmpl/GEvo.tmpl
+++ b/web/tmpl/GEvo.tmpl
@@ -540,7 +540,7 @@ onClick="loading([], ['results']); run([
   <TR>
   <TD>Blast Program: </TD>
   <TD><select class="backbox" id="blast_program" size="1" onchange='check_blast_program()'>
-       <option selected>blastn</option>
+       <option>blastn</option>
        <option>tblastx</option>
        <option>blastz</option>
       </select>
