--- a/web/tmpl/GeLo.tmpl
+++ b/web/tmpl/GeLo.tmpl
@@ -1,5 +1,3 @@
-<TMPL_IF NAME="FRONT_PAGE">
-
 <script language="javascript">
 
 function launch_seqview(dsid, chr)
@@ -50,7 +48,7 @@ function launch_viewer (dsd, chr) {
  x = kaj.G('x');
  z = kaj.G('z');
  if (z > 12) {z=12;}
- link =  "GeLo.pl?z="+z+"&INITIAL_CENTER="+x+",0&ds="+dsd+"&chr="+chr;
+ link =  "GenomeView.pl?z="+z+"&x="+x+"&ds="+dsd+"&chr="+chr;
  window.location=link;
 }
 
@@ -76,82 +74,3 @@ function launch_viewer (dsd, chr) {
 </TABLE>
 <IMG SRC = "picts/table/spacer-1x1.png" onload="dataset_chain();">
 
-<TMPL_ELSE>
-<style>
-
-#container {
-  width: 600px;
-  height: 345;
-  position:absolute;
-  border: 1px solid #ccc;
-}
-
-</style>
-
-<script>
-
-connect(window,'onload',myInit);
-var gb;
-function myInit(){
-    gb = new Tiler('container',[config]);
-    connect('zoomin','onclick',function(){gb.zoom(1)})
-    connect('zoomout','onclick',function(){gb.zoom(-1)})
-    connect('container','onmousemove',gb,tmouse);
-    connect('container','onclick',query);
-    connect('go2center','onclick',function(){gb.setCenter($('bploc').value,0)});
-    // TOOD for anything with class function, connect element with
-    // id = fred to function fred(){ }
-}
-function rw2pix(e){
-    $('pixloc').value = gb.rw2pix($('bploc').value,0)[0];
-}
-function tmouse(e){
-  var mx =  e.mouse().page.x;
-  var ex = getElementPosition(e.src()).x;
-  $('bploc').value = this.pix2rw(mx - ex,0)[0];
-  //rw2pix();
-}
-var qurl = '/CoGe/FeatAnno.pl?no_org=1&';
-
-function query(e){
-   var mx = e.mouse().page.x;
-   var ex = getElementPosition(e.src()).x;
-   var pixelpos = mx - ex;
-   var bppos = gb.pix2rw(pixelpos,0)[0];
-   placeanno('<font class="loading">Loading annotations for position '+bppos+'. . .</font>');
-   var url = qurl + 'chr='+ $('chr').value + '&ds='+$('ds').value +
-   '&loc='+bppos;
-   jfetch(url, 'info');
-}
-
-function placeanno(stuff) {
- //  document.info.info.value = stuff;
-  kaj.GS('info', stuff);
-}
-
-</script>
-
-<form action='javascript:;' >
-<input id='iw' type ='hidden' value=256 />
-<input id='chr' type ='hidden' value='<TMPL_VAR NAME=CHR>' />
-<input id='ds' type ='hidden' value='<TMPL_VAR NAME=DS>' />
-<input id='x' type ='hidden' value='<TMPL_VAR NAME=X>' />
-<input id='xloc' type ='hidden' value='<TMPL_VAR NAME=XLOC>' />
-
-Nucleotide: <input class = "backbox" type='text' id='bploc' value='' size=10>
-<input type='button' id='go2center' value='re-center' /> <br>
-<!--<input class = "backbox" type='text' size = "10" id='center' value=100000>-->
-<!--Pixel: <input class = "backbox" type='text' id='pixloc' value='' size =4><br/>-->
-<button id='zoomin' name='zoomin' class="tileClass" > Zoom In </button>
-<button name='zoomout' id='zoomout' class="tileClass" > Zoom Out </button>
-Current Zoom: <input type ='text' class = "backbox" id='z' value='<TMPL_VAR NAME=Z>' size = 2>
-<br>
-Organism: <font class="species"><TMPL_VAR NAME=ORG></font>
-Dataset: <font class="species"><TMPL_VAR NAME=DS_NAME></font>
-<div id='container' class="tileClass" style='position:relative;left:6px;top:10px;width:1200px;height:350px;border:1px solid black' > </div>
-<div id ='info' style='position:relative;left:6px;top:10px;width:1200px;height:400px'><FORM NAME="info"></FORM></div>
-</form>
-<br>
-<div class = "small">Click on the map to view feature information at that position </div>
-<div class = "small">Click and drag the map to move genomic view left and right</div>
-</TMPL_IF>
